--- a/primeiro-workflow.yml
+++ b/primeiro-workflow.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v2 # Action para clonar o repositório
 
       - name: Mostrar Mensagem
-        run: echo "Olá, GitHub Actions!" # Comando a ser executado
+        run: echo "Olá, testando GitHub Actions!" # Comando a ser executado
