--- a/.github/workflows/mdc-workflow.yml
+++ b/.github/workflows/mdc-workflow.yml
@@ -14,4 +14,4 @@ jobs:
         uses: actions/checkout@v2 # Action para clonar o repositório
 
       - name: Mostrar Mensagem
-        run: echo "Olá, MDC, GitHub Actions!" # Comando a ser executado
+        run: echo "Olá, MDC, GitHub Actions funcionando!" # Comando a ser executado
