--- a/.github/workflows/github-actions-workflow.yml
+++ b/.github/workflows/github-actions-workflow.yml
@@ -1,4 +1,4 @@
-name: Workflow sem github actions
+name: workflow com github actions
 
 on:
   push:
@@ -15,4 +15,4 @@ jobs:
         uses: actions/checkout@v2 # Action para clonar o repositório
 
       - name: Mostrar Mensagem
-        run: echo "Olá, testando a esteira pipeline sem passar pelo GitHub Actions!" # Comando a ser executado
+        run: echo "Olá, testando a esteira pipeline com GitHub Actions!" # Comando a ser executado
